--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev": "vite",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
+    "server": "NODE_ENV=development tsx server/index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
